2007-11-16  Eskil Bylund  <eskil@letterboxes.org>

	* gtk/ListStore.custom:
	* gtk/TreeStore.custom: Implement InsertWithValues.
	* gtk/Gtk.metadata: Deprecate the old generated method.
	[Fixes #325040]

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* sample/TreeModelDemo.cs: lt/gt typo bugfix [Fixes #333653]

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: remove GCallback mapping.
	* glib/GCallback.cs: kill, bad idea.

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* glib/IOChannel.cs: IOChannel wrapper implementation.
	* glib/Makefile.am: build new files.
	* glib/Marshaller.cs: new string array marshaling methods.
	* glib/Spawn.cs: g_spawn* wrapper implementation.
	* sample/SpawnTests.cs: tests for the new GLib.Process class
	and a cursory exercise of IOChannel for SpawnAsyncWithPipes.

2007-11-09  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: support for null_term_array attribute.

2007-11-08  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs: new null-terminated string[] marshaler from
	Mono.Unix with adaptations by Michael Hutchinson.

2007-11-02  Mike Kestner  <mkestner@novell.com>

	* glib/SList.cs:
	* glib/List.cs: add Array dup of object[] ctor since we
	are passing typed arrays from generated code.

2007-11-02  Mike Kestner  <mkestner@novell.com>

	* generator/Method.cs: need to use on the Base method name to 
	lookup complements and determine if the method is a getter or setter
	when an explicit interface method name is used.

2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: mappings for GCallback and GSourceFunc.
	* glib/GCallback.cs: GCallback declaration.
	* glib/Source.cs: GSourceFunc declaration.

2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod.cs: clean up compiler warning and duplicate
	call.

2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: generate an Implementor prop on the