@@ -45,7 +45,7 @@ namespace GLib {
 	public class Signal {
 
 		GCHandle gc_handle;
-		IntPtr handle;
+		Object obj;
 		string name;
 		uint before_id = UInt32.MaxValue;
 		uint after_id = UInt32.MaxValue;
@@ -53,14 +53,11 @@ namespace GLib {
 
 		private Signal (GLib.Object obj, string signal_name, Delegate marshaler)
 		{
-			handle = obj.Handle;
+			this.obj = obj;
 			name = signal_name;
 			this.marshaler = marshaler;
-			gc_handle = GCHandle.Alloc (this);
-			IntPtr native_key = GLib.Marshaller.StringToPtrGStrdup (name + "_signal_marshaler");
-			if (handle != IntPtr.Zero)
-				g_object_set_data_full (handle, native_key, (IntPtr) gc_handle, DestroyHelper.NotifyHandler);
-			GLib.Marshaller.Free (native_key);
+			gc_handle = GCHandle.Alloc (this, GCHandleType.Weak);
+			obj.Signals [name] = this;
 		}
 
 		public static Signal Lookup (GLib.Object obj, string name)
@@ -70,18 +67,10 @@ namespace GLib {
 
 		public static Signal Lookup (GLib.Object obj, string name, Delegate marshaler)
 		{
-			IntPtr native_key = GLib.Marshaller.StringToPtrGStrdup (name + "_signal_marshaler");
-			IntPtr data;
-			if (obj.Handle == IntPtr.Zero)
-				data = IntPtr.Zero;
-			else
-				data = g_object_get_data (obj.Handle, native_key);
-			GLib.Marshaller.Free (native_key);
-			if (data == IntPtr.Zero)
-				return new Signal (obj, name, marshaler);
-
-			GCHandle gch = (GCHandle) data;
-			return gch.Target as Signal;
+			Signal result = obj.Signals [name] as Signal;
+			if (result == null)
+				result = new Signal (obj, name, marshaler);
+			return result as Signal;
 		}
 
 		Delegate before_handler;
@@ -89,7 +78,7 @@ namespace GLib {
 
 		public Delegate Handler {
 			get {
-				InvocationHint hint = (InvocationHint) Marshal.PtrToStructure (g_signal_get_invocation_hint (handle), typeof (InvocationHint));
+				InvocationHint hint = (InvocationHint) Marshal.PtrToStructure (g_signal_get_invocation_hint (obj.Handle), typeof (InvocationHint));
 				if (hint.run_type == SignalFlags.RunFirst)
 					return before_handler;
 				else
@@ -100,7 +89,7 @@ namespace GLib {
 		uint Connect (int flags)
 		{
 			IntPtr native_name = GLib.Marshaller.StringToPtrGStrdup (name);
-			uint id = g_signal_connect_data (handle, native_name, marshaler, (IntPtr) gc_handle, IntPtr.Zero, flags);
+			uint id = g_signal_connect_data (obj.Handle, native_name, marshaler, (IntPtr) gc_handle, IntPtr.Zero, flags);
 			GLib.Marshaller.Free (native_name);
 			return id;
 		}
@@ -139,21 +128,13 @@ namespace GLib {
 			}
 
 			if (after_id == UInt32.MaxValue && before_id == UInt32.MaxValue)
-				DisconnectObject ();
-		}
-
-		void DisconnectObject ()
-		{
-			IntPtr native_key = GLib.Marshaller.StringToPtrGStrdup (name + "_signal_marshaler");
-			if (handle != IntPtr.Zero)
-				g_object_set_data (handle, native_key, IntPtr.Zero);
-			GLib.Marshaller.Free (native_key);
+				obj.Signals.Remove (name);
 		}
 
 		void DisconnectHandler (uint handler_id)
 		{
-			if (handler_id != UInt32.MaxValue && g_signal_handler_is_connected (handle, handler_id))
-				g_signal_handler_disconnect (handle, handler_id);
+			if (handler_id != UInt32.MaxValue && g_signal_handler_is_connected (obj.Handle, handler_id))
+				g_signal_handler_disconnect (obj.Handle, handler_id);
 		}
 
 		[CDeclCallback]
@@ -185,15 +166,6 @@ namespace GLib {
 				return event_handler_delegate;
 			}
 		}
-
-		[DllImport("libgobject-2.0-0.dll")]
-		static extern IntPtr g_object_get_data (IntPtr instance, IntPtr key);
-
-		[DllImport("libgobject-2.0-0.dll")]
-		static extern void g_object_set_data (IntPtr instance, IntPtr key, IntPtr data);
-
-		[DllImport("libgobject-2.0-0.dll")]
-		static extern void g_object_set_data_full (IntPtr instance, IntPtr key, IntPtr data, DestroyNotify notify);
 
 		[DllImport("libgobject-2.0-0.dll")]
 		static extern uint g_signal_connect_data(IntPtr obj, IntPtr name, Delegate cb, IntPtr gc_handle, IntPtr dummy, int flags);
