@@ -1,3 +1,10 @@
+2007-11-16  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Object.cs: use toggle refs for all objects.
+	de-obsolete Data hash.  Add internal Signals hash.
+	* glib/Signal.cs: switch to weak gchandles.
+	* glib/WeakObject.cs: kill.
+
 2007-11-16  Eskil Bylund  <eskil@letterboxes.org>
 
 	* gtk/ListStore.custom:
